// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drawStory çizim kaydı > 1 maç, kısa başlık 1`] = `
"["addColorStop","createLinearGradient(0,0,0,1920)",0,"#00111f"]
["addColorStop","createLinearGradient(0,0,0,1920)",0.5,"#00192d"]
["addColorStop","createLinearGradient(0,0,0,1920)",1,"#011d31"]
["=","fillStyle","createLinearGradient(0,0,0,1920)"]
["fillRect",0,0,1080,1920]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",0,"rgba(251, 125, 39, 0.22)"]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",1,"rgba(251, 125, 39, 0)"]
["=","fillStyle","createRadialGradient(1080,0,0,1080,0,900)"]
["fillRect",0,0,1080,1920]
["beginPath"]
["moveTo",104,240]
["arcTo",270,240,270,450,44]
["arcTo",270,450,60,450,44]
["arcTo",60,450,60,240,44]
["arcTo",60,240,270,240,44]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",4]
["=","strokeStyle","#fb7d27"]
["stroke"]
["=","fillStyle","#ffffff"]
["=","font","900 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","GOLLAZIM",165,345]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#ffffff"]
["=","font","800 50px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GÜNÜN",306,284]
["=","font","900 88px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["=","font","900 88px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","2.5 ÜST",306,382]
["=","fillStyle","#ffffff"]
["=","font","800 50px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","ÖNERİLERİ",306,448]
["=","fillStyle","#8ea4b8"]
["=","font","600 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","6 Ekim 2026 Salı",60,520]
["beginPath"]
["moveTo",98.13333333333333,560]
["arcTo",1020,560,1020,780,38.13333333333333]
["arcTo",1020,780,60,780,38.13333333333333]
["arcTo",60,780,60,560,38.13333333333333]
["arcTo",60,560,1020,560,38.13333333333333]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",120.13333333333333,670,38.13333333333333,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 41.06666666666666px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","1",120.13333333333333,671]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 88px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%95",994,646.5333333333333]
["beginPath"]
["lineTo",799.52,700.8]
["lineTo",804.5631974646694,712.9253008549297]
["lineTo",817.653477577361,713.9747426405844]
["lineTo",807.6800649098124,722.5180324784037]
["lineTo",810.7271054770431,735.2919240260824]
["lineTo",799.52,728.4466666666667]
["lineTo",788.3128945229569,735.2919240260824]
["lineTo",791.3599350901876,722.5180324784037]
["lineTo",781.386522422639,713.9747426405844]
["lineTo",794.4768025353305,712.9253008549297]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",843.3733333333332,700.8]
["lineTo",848.4165307980027,712.9253008549297]
["lineTo",861.5068109106942,713.9747426405844]
["lineTo",851.5333982431456,722.5180324784037]
["lineTo",854.5804388103763,735.2919240260824]
["lineTo",843.3733333333332,728.4466666666667]
["lineTo",832.1662278562901,735.2919240260824]
["lineTo",835.2132684235208,722.5180324784037]
["lineTo",825.2398557559723,713.9747426405844]
["lineTo",838.3301358686638,712.9253008549297]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",887.2266666666666,700.8]
["lineTo",892.269864131336,712.9253008549297]
["lineTo",905.3601442440275,713.9747426405844]
["lineTo",895.386731576479,722.5180324784037]
["lineTo",898.4337721437097,735.2919240260824]
["lineTo",887.2266666666666,728.4466666666667]
["lineTo",876.0195611896235,735.2919240260824]
["lineTo",879.0666017568542,722.5180324784037]
["lineTo",869.0931890893056,713.9747426405844]
["lineTo",882.1834692019971,712.9253008549297]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",931.0799999999999,700.8]
["lineTo",936.1231974646694,712.9253008549297]
["lineTo",949.2134775773609,713.9747426405844]
["lineTo",939.2400649098123,722.5180324784037]
["lineTo",942.287105477043,735.2919240260824]
["lineTo",931.0799999999999,728.4466666666667]
["lineTo",919.8728945229568,735.2919240260824]
["lineTo",922.9199350901876,722.5180324784037]
["lineTo",912.946522422639,713.9747426405844]
["lineTo",926.0368025353305,712.9253008549297]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",974.9333333333333,700.8]
["lineTo",979.9765307980027,712.9253008549297]
["lineTo",993.0668109106942,713.9747426405844]
["lineTo",983.0933982431457,722.5180324784037]
["lineTo",986.1404388103764,735.2919240260824]
["lineTo",974.9333333333333,728.4466666666667]
["lineTo",963.7262278562902,735.2919240260824]
["lineTo",966.7732684235209,722.5180324784037]
["lineTo",956.7998557559723,713.9747426405844]
["lineTo",969.8901358686638,712.9253008549297]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["=","textAlign","left"]
["=","font","800 48px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 44px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 44px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Galatasaray",178.26666666666665,622]
["fillText","Bosnia Herzegovina U21",178.26666666666665,676]
["=","font","500 26px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","18:00  ·  Süper Lig",178.26666666666665,728]
["=","textAlign","center"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#8ea4b8"]
["=","font","500 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","Veri destekli sinyal, garanti değil.",540,1680]"
`;

exports[`drawStory çizim kaydı > 4 maç, uzun başlık 1`] = `
"["addColorStop","createLinearGradient(0,0,0,1920)",0,"#00111f"]
["addColorStop","createLinearGradient(0,0,0,1920)",0.5,"#00192d"]
["addColorStop","createLinearGradient(0,0,0,1920)",1,"#011d31"]
["=","fillStyle","createLinearGradient(0,0,0,1920)"]
["fillRect",0,0,1080,1920]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",0,"rgba(251, 125, 39, 0.22)"]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",1,"rgba(251, 125, 39, 0)"]
["=","fillStyle","createRadialGradient(1080,0,0,1080,0,900)"]
["fillRect",0,0,1080,1920]
["beginPath"]
["moveTo",104,240]
["arcTo",270,240,270,450,44]
["arcTo",270,450,60,450,44]
["arcTo",60,450,60,240,44]
["arcTo",60,240,270,240,44]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",4]
["=","strokeStyle","#fb7d27"]
["stroke"]
["=","fillStyle","#ffffff"]
["=","font","900 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","GOLLAZIM",165,345]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#ffffff"]
["=","font","800 50px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GÜNÜN",306,284]
["=","font","900 88px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 80px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 72px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["=","font","900 72px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","İLK YARI 0.5 ÜST",306,382]
["=","fillStyle","#ffffff"]
["=","font","800 50px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","ÖNERİLERİ",306,448]
["=","fillStyle","#8ea4b8"]
["=","font","600 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","6 Ekim 2026 Salı",60,520]
["beginPath"]
["moveTo",86,560]
["arcTo",1020,560,1020,710,26]
["arcTo",1020,710,60,710,26]
["arcTo",60,710,60,560,26]
["arcTo",60,560,1020,560,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",108,635,26,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","1",108,636]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 60px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%95",994,619]
["beginPath"]
["lineTo",861.4,656]
["lineTo",864.838543725911,664.2672505829065]
["lineTo",873.763734711837,664.9827790731257]
["lineTo",866.9636806203266,670.8077494170934]
["lineTo",869.0412082798022,679.5172209268743]
["lineTo",861.4,674.85]
["lineTo",853.7587917201978,679.5172209268743]
["lineTo",855.8363193796733,670.8077494170934]
["lineTo",849.036265288163,664.9827790731257]
["lineTo",857.961456274089,664.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",891.3,656]
["lineTo",894.738543725911,664.2672505829065]
["lineTo",903.6637347118369,664.9827790731257]
["lineTo",896.8636806203266,670.8077494170934]
["lineTo",898.9412082798021,679.5172209268743]
["lineTo",891.3,674.85]
["lineTo",883.6587917201978,679.5172209268743]
["lineTo",885.7363193796733,670.8077494170934]
["lineTo",878.936265288163,664.9827790731257]
["lineTo",887.8614562740889,664.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",921.2,656]
["lineTo",924.6385437259111,664.2672505829065]
["lineTo",933.563734711837,664.9827790731257]
["lineTo",926.7636806203267,670.8077494170934]
["lineTo",928.8412082798022,679.5172209268743]
["lineTo",921.2,674.85]
["lineTo",913.5587917201979,679.5172209268743]
["lineTo",915.6363193796734,670.8077494170934]
["lineTo",908.8362652881631,664.9827790731257]
["lineTo",917.761456274089,664.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",951.1,656]
["lineTo",954.538543725911,664.2672505829065]
["lineTo",963.463734711837,664.9827790731257]
["lineTo",956.6636806203267,670.8077494170934]
["lineTo",958.7412082798022,679.5172209268743]
["lineTo",951.1,674.85]
["lineTo",943.4587917201978,679.5172209268743]
["lineTo",945.5363193796734,670.8077494170934]
["lineTo",938.736265288163,664.9827790731257]
["lineTo",947.661456274089,664.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",981,656]
["lineTo",984.438543725911,664.2672505829065]
["lineTo",993.363734711837,664.9827790731257]
["lineTo",986.5636806203266,670.8077494170934]
["lineTo",988.6412082798022,679.5172209268743]
["lineTo",981,674.85]
["lineTo",973.3587917201978,679.5172209268743]
["lineTo",975.4363193796734,670.8077494170934]
["lineTo",968.636265288163,664.9827790731257]
["lineTo",977.561456274089,664.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["=","textAlign","left"]
["=","font","800 40px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 36px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 32px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 32px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Galatasaray – Bosnia Herzegovina U21",154,617]
["=","font","500 26px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","18:00  ·  Süper Lig",154,665]
["beginPath"]
["moveTo",86,724]
["arcTo",1020,724,1020,874,26]
["arcTo",1020,874,60,874,26]
["arcTo",60,874,60,724,26]
["arcTo",60,724,1020,724,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",108,799,26,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","2",108,800]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 60px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%92",994,783]
["beginPath"]
["lineTo",861.4,820]
["lineTo",864.838543725911,828.2672505829065]
["lineTo",873.763734711837,828.9827790731257]
["lineTo",866.9636806203266,834.8077494170934]
["lineTo",869.0412082798022,843.5172209268743]
["lineTo",861.4,838.85]
["lineTo",853.7587917201978,843.5172209268743]
["lineTo",855.8363193796733,834.8077494170934]
["lineTo",849.036265288163,828.9827790731257]
["lineTo",857.961456274089,828.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",891.3,820]
["lineTo",894.738543725911,828.2672505829065]
["lineTo",903.6637347118369,828.9827790731257]
["lineTo",896.8636806203266,834.8077494170934]
["lineTo",898.9412082798021,843.5172209268743]
["lineTo",891.3,838.85]
["lineTo",883.6587917201978,843.5172209268743]
["lineTo",885.7363193796733,834.8077494170934]
["lineTo",878.936265288163,828.9827790731257]
["lineTo",887.8614562740889,828.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",921.2,820]
["lineTo",924.6385437259111,828.2672505829065]
["lineTo",933.563734711837,828.9827790731257]
["lineTo",926.7636806203267,834.8077494170934]
["lineTo",928.8412082798022,843.5172209268743]
["lineTo",921.2,838.85]
["lineTo",913.5587917201979,843.5172209268743]
["lineTo",915.6363193796734,834.8077494170934]
["lineTo",908.8362652881631,828.9827790731257]
["lineTo",917.761456274089,828.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",951.1,820]
["lineTo",954.538543725911,828.2672505829065]
["lineTo",963.463734711837,828.9827790731257]
["lineTo",956.6636806203267,834.8077494170934]
["lineTo",958.7412082798022,843.5172209268743]
["lineTo",951.1,838.85]
["lineTo",943.4587917201978,843.5172209268743]
["lineTo",945.5363193796734,834.8077494170934]
["lineTo",938.736265288163,828.9827790731257]
["lineTo",947.661456274089,828.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",981,820]
["lineTo",984.438543725911,828.2672505829065]
["lineTo",993.363734711837,828.9827790731257]
["lineTo",986.5636806203266,834.8077494170934]
["lineTo",988.6412082798022,843.5172209268743]
["lineTo",981,838.85]
["lineTo",973.3587917201978,843.5172209268743]
["lineTo",975.4363193796734,834.8077494170934]
["lineTo",968.636265288163,828.9827790731257]
["lineTo",977.561456274089,828.2672505829065]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","800 40px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 36px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 36px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Fenerbahçe – İstanbul Başakşehir",154,781]
["=","font","500 26px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","19:45  ·  Süper Lig",154,829]
["beginPath"]
["moveTo",86,888]
["arcTo",1020,888,1020,1038,26]
["arcTo",1020,1038,60,1038,26]
["arcTo",60,1038,60,888,26]
["arcTo",60,888,1020,888,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",108,963,26,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","3",108,964]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 60px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%89",994,947]
["beginPath"]
["lineTo",861.4,984]
["lineTo",864.838543725911,992.2672505829065]
["lineTo",873.763734711837,992.9827790731257]
["lineTo",866.9636806203266,998.8077494170934]
["lineTo",869.0412082798022,1007.5172209268743]
["lineTo",861.4,1002.85]
["lineTo",853.7587917201978,1007.5172209268743]
["lineTo",855.8363193796733,998.8077494170934]
["lineTo",849.036265288163,992.9827790731257]
["lineTo",857.961456274089,992.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",891.3,984]
["lineTo",894.738543725911,992.2672505829065]
["lineTo",903.6637347118369,992.9827790731257]
["lineTo",896.8636806203266,998.8077494170934]
["lineTo",898.9412082798021,1007.5172209268743]
["lineTo",891.3,1002.85]
["lineTo",883.6587917201978,1007.5172209268743]
["lineTo",885.7363193796733,998.8077494170934]
["lineTo",878.936265288163,992.9827790731257]
["lineTo",887.8614562740889,992.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",921.2,984]
["lineTo",924.6385437259111,992.2672505829065]
["lineTo",933.563734711837,992.9827790731257]
["lineTo",926.7636806203267,998.8077494170934]
["lineTo",928.8412082798022,1007.5172209268743]
["lineTo",921.2,1002.85]
["lineTo",913.5587917201979,1007.5172209268743]
["lineTo",915.6363193796734,998.8077494170934]
["lineTo",908.8362652881631,992.9827790731257]
["lineTo",917.761456274089,992.2672505829065]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",951.1,984]
["lineTo",954.538543725911,992.2672505829065]
["lineTo",963.463734711837,992.9827790731257]
["lineTo",956.6636806203267,998.8077494170934]
["lineTo",958.7412082798022,1007.5172209268743]
["lineTo",951.1,1002.85]
["lineTo",943.4587917201978,1007.5172209268743]
["lineTo",945.5363193796734,998.8077494170934]
["lineTo",938.736265288163,992.9827790731257]
["lineTo",947.661456274089,992.2672505829065]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",981,984]
["lineTo",984.438543725911,992.2672505829065]
["lineTo",993.363734711837,992.9827790731257]
["lineTo",986.5636806203266,998.8077494170934]
["lineTo",988.6412082798022,1007.5172209268743]
["lineTo",981,1002.85]
["lineTo",973.3587917201978,1007.5172209268743]
["lineTo",975.4363193796734,998.8077494170934]
["lineTo",968.636265288163,992.9827790731257]
["lineTo",977.561456274089,992.2672505829065]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","800 40px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 36px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 32px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Peterborough United – Ipswich Town U21",154,945]
["=","font","500 26px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","20:00  ·  Süper Lig",154,993]
["beginPath"]
["moveTo",86,1052]
["arcTo",1020,1052,1020,1202,26]
["arcTo",1020,1202,60,1202,26]
["arcTo",60,1202,60,1052,26]
["arcTo",60,1052,1020,1052,26]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",108,1127,26,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","4",108,1128]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 60px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%86",994,1111]
["beginPath"]
["lineTo",861.4,1148]
["lineTo",864.838543725911,1156.2672505829066]
["lineTo",873.763734711837,1156.9827790731256]
["lineTo",866.9636806203266,1162.8077494170934]
["lineTo",869.0412082798022,1171.5172209268744]
["lineTo",861.4,1166.85]
["lineTo",853.7587917201978,1171.5172209268744]
["lineTo",855.8363193796733,1162.8077494170934]
["lineTo",849.036265288163,1156.9827790731256]
["lineTo",857.961456274089,1156.2672505829066]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",891.3,1148]
["lineTo",894.738543725911,1156.2672505829066]
["lineTo",903.6637347118369,1156.9827790731256]
["lineTo",896.8636806203266,1162.8077494170934]
["lineTo",898.9412082798021,1171.5172209268744]
["lineTo",891.3,1166.85]
["lineTo",883.6587917201978,1171.5172209268744]
["lineTo",885.7363193796733,1162.8077494170934]
["lineTo",878.936265288163,1156.9827790731256]
["lineTo",887.8614562740889,1156.2672505829066]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",921.2,1148]
["lineTo",924.6385437259111,1156.2672505829066]
["lineTo",933.563734711837,1156.9827790731256]
["lineTo",926.7636806203267,1162.8077494170934]
["lineTo",928.8412082798022,1171.5172209268744]
["lineTo",921.2,1166.85]
["lineTo",913.5587917201979,1171.5172209268744]
["lineTo",915.6363193796734,1162.8077494170934]
["lineTo",908.8362652881631,1156.9827790731256]
["lineTo",917.761456274089,1156.2672505829066]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",951.1,1148]
["lineTo",954.538543725911,1156.2672505829066]
["lineTo",963.463734711837,1156.9827790731256]
["lineTo",956.6636806203267,1162.8077494170934]
["lineTo",958.7412082798022,1171.5172209268744]
["lineTo",951.1,1166.85]
["lineTo",943.4587917201978,1171.5172209268744]
["lineTo",945.5363193796734,1162.8077494170934]
["lineTo",938.736265288163,1156.9827790731256]
["lineTo",947.661456274089,1156.2672505829066]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",981,1148]
["lineTo",984.438543725911,1156.2672505829066]
["lineTo",993.363734711837,1156.9827790731256]
["lineTo",986.5636806203266,1162.8077494170934]
["lineTo",988.6412082798022,1171.5172209268744]
["lineTo",981,1166.85]
["lineTo",973.3587917201978,1171.5172209268744]
["lineTo",975.4363193796734,1162.8077494170934]
["lineTo",968.636265288163,1156.9827790731256]
["lineTo",977.561456274089,1156.2672505829066]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","800 40px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 36px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 32px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","800 32px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Bosnia Herzegovina U21 – Galatasaray",154,1109]
["=","font","500 26px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","Süper Lig",154,1157]
["=","textAlign","center"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#8ea4b8"]
["=","font","500 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","Veri destekli sinyal, garanti değil.",540,1680]"
`;

exports[`drawStory çizim kaydı > 15 maç, bölünen başlık 1`] = `
"["addColorStop","createLinearGradient(0,0,0,1920)",0,"#00111f"]
["addColorStop","createLinearGradient(0,0,0,1920)",0.5,"#00192d"]
["addColorStop","createLinearGradient(0,0,0,1920)",1,"#011d31"]
["=","fillStyle","createLinearGradient(0,0,0,1920)"]
["fillRect",0,0,1080,1920]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",0,"rgba(251, 125, 39, 0.22)"]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",1,"rgba(251, 125, 39, 0)"]
["=","fillStyle","createRadialGradient(1080,0,0,1080,0,900)"]
["fillRect",0,0,1080,1920]
["beginPath"]
["moveTo",104,240]
["arcTo",270,240,270,450,44]
["arcTo",270,450,60,450,44]
["arcTo",60,450,60,240,44]
["arcTo",60,240,270,240,44]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",4]
["=","strokeStyle","#fb7d27"]
["stroke"]
["=","fillStyle","#ffffff"]
["=","font","900 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","GOLLAZIM",165,345]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#ffffff"]
["=","font","800 50px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GÜNÜN",306,284]
["=","font","900 88px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 80px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 72px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 64px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 56px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 50px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 44px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["=","font","900 54px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 54px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","900 54px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","DEPLASMAN KAZANIR",306,346]
["fillText","& 2.5 ÜST",306,402]
["=","fillStyle","#ffffff"]
["=","font","800 50px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","ÖNERİLERİ",306,462]
["=","fillStyle","#8ea4b8"]
["=","font","600 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","6 Ekim 2026 Salı",60,520]
["beginPath"]
["moveTo",78,560]
["arcTo",1020,560,1020,622,18]
["arcTo",1020,622,60,622,18]
["arcTo",60,622,60,560,18]
["arcTo",60,560,1020,560,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,591,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","1",102,592]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%95",994,592]
["beginPath"]
["lineTo",788.88,581]
["lineTo",791.5250336353162,587.3594235253128]
["lineTo",798.3905651629515,587.9098300562505]
["lineTo",793.1597543233282,592.3905764746872]
["lineTo",794.7578525229247,599.0901699437495]
["lineTo",788.88,595.5]
["lineTo",783.0021474770753,599.0901699437495]
["lineTo",784.6002456766718,592.3905764746872]
["lineTo",779.3694348370484,587.9098300562505]
["lineTo",786.2349663646838,587.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,581]
["lineTo",814.5250336353162,587.3594235253128]
["lineTo",821.3905651629515,587.9098300562505]
["lineTo",816.1597543233282,592.3905764746872]
["lineTo",817.7578525229247,599.0901699437495]
["lineTo",811.88,595.5]
["lineTo",806.0021474770753,599.0901699437495]
["lineTo",807.6002456766718,592.3905764746872]
["lineTo",802.3694348370484,587.9098300562505]
["lineTo",809.2349663646838,587.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,581]
["lineTo",837.5250336353162,587.3594235253128]
["lineTo",844.3905651629515,587.9098300562505]
["lineTo",839.1597543233282,592.3905764746872]
["lineTo",840.7578525229247,599.0901699437495]
["lineTo",834.88,595.5]
["lineTo",829.0021474770753,599.0901699437495]
["lineTo",830.6002456766718,592.3905764746872]
["lineTo",825.3694348370484,587.9098300562505]
["lineTo",832.2349663646838,587.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",857.88,581]
["lineTo",860.5250336353162,587.3594235253128]
["lineTo",867.3905651629515,587.9098300562505]
["lineTo",862.1597543233282,592.3905764746872]
["lineTo",863.7578525229247,599.0901699437495]
["lineTo",857.88,595.5]
["lineTo",852.0021474770753,599.0901699437495]
["lineTo",853.6002456766718,592.3905764746872]
["lineTo",848.3694348370484,587.9098300562505]
["lineTo",855.2349663646838,587.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",880.88,581]
["lineTo",883.5250336353162,587.3594235253128]
["lineTo",890.3905651629515,587.9098300562505]
["lineTo",885.1597543233282,592.3905764746872]
["lineTo",886.7578525229247,599.0901699437495]
["lineTo",880.88,595.5]
["lineTo",875.0021474770753,599.0901699437495]
["lineTo",876.6002456766718,592.3905764746872]
["lineTo",871.3694348370484,587.9098300562505]
["lineTo",878.2349663646838,587.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","18:00",142,592]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Galatasaray – Bosnia Herzegovina U21",225.2,592]
["beginPath"]
["moveTo",78,630]
["arcTo",1020,630,1020,692,18]
["arcTo",1020,692,60,692,18]
["arcTo",60,692,60,630,18]
["arcTo",60,630,1020,630,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,661,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","2",102,662]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%92",994,662]
["beginPath"]
["lineTo",788.88,651]
["lineTo",791.5250336353162,657.3594235253128]
["lineTo",798.3905651629515,657.9098300562505]
["lineTo",793.1597543233282,662.3905764746872]
["lineTo",794.7578525229247,669.0901699437495]
["lineTo",788.88,665.5]
["lineTo",783.0021474770753,669.0901699437495]
["lineTo",784.6002456766718,662.3905764746872]
["lineTo",779.3694348370484,657.9098300562505]
["lineTo",786.2349663646838,657.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,651]
["lineTo",814.5250336353162,657.3594235253128]
["lineTo",821.3905651629515,657.9098300562505]
["lineTo",816.1597543233282,662.3905764746872]
["lineTo",817.7578525229247,669.0901699437495]
["lineTo",811.88,665.5]
["lineTo",806.0021474770753,669.0901699437495]
["lineTo",807.6002456766718,662.3905764746872]
["lineTo",802.3694348370484,657.9098300562505]
["lineTo",809.2349663646838,657.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,651]
["lineTo",837.5250336353162,657.3594235253128]
["lineTo",844.3905651629515,657.9098300562505]
["lineTo",839.1597543233282,662.3905764746872]
["lineTo",840.7578525229247,669.0901699437495]
["lineTo",834.88,665.5]
["lineTo",829.0021474770753,669.0901699437495]
["lineTo",830.6002456766718,662.3905764746872]
["lineTo",825.3694348370484,657.9098300562505]
["lineTo",832.2349663646838,657.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",857.88,651]
["lineTo",860.5250336353162,657.3594235253128]
["lineTo",867.3905651629515,657.9098300562505]
["lineTo",862.1597543233282,662.3905764746872]
["lineTo",863.7578525229247,669.0901699437495]
["lineTo",857.88,665.5]
["lineTo",852.0021474770753,669.0901699437495]
["lineTo",853.6002456766718,662.3905764746872]
["lineTo",848.3694348370484,657.9098300562505]
["lineTo",855.2349663646838,657.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",880.88,651]
["lineTo",883.5250336353162,657.3594235253128]
["lineTo",890.3905651629515,657.9098300562505]
["lineTo",885.1597543233282,662.3905764746872]
["lineTo",886.7578525229247,669.0901699437495]
["lineTo",880.88,665.5]
["lineTo",875.0021474770753,669.0901699437495]
["lineTo",876.6002456766718,662.3905764746872]
["lineTo",871.3694348370484,657.9098300562505]
["lineTo",878.2349663646838,657.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","19:45",142,662]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Fenerbahçe – İstanbul Başakşehir",225.2,662]
["beginPath"]
["moveTo",78,700]
["arcTo",1020,700,1020,762,18]
["arcTo",1020,762,60,762,18]
["arcTo",60,762,60,700,18]
["arcTo",60,700,1020,700,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,731,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","3",102,732]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%89",994,732]
["beginPath"]
["lineTo",788.88,721]
["lineTo",791.5250336353162,727.3594235253128]
["lineTo",798.3905651629515,727.9098300562505]
["lineTo",793.1597543233282,732.3905764746872]
["lineTo",794.7578525229247,739.0901699437495]
["lineTo",788.88,735.5]
["lineTo",783.0021474770753,739.0901699437495]
["lineTo",784.6002456766718,732.3905764746872]
["lineTo",779.3694348370484,727.9098300562505]
["lineTo",786.2349663646838,727.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,721]
["lineTo",814.5250336353162,727.3594235253128]
["lineTo",821.3905651629515,727.9098300562505]
["lineTo",816.1597543233282,732.3905764746872]
["lineTo",817.7578525229247,739.0901699437495]
["lineTo",811.88,735.5]
["lineTo",806.0021474770753,739.0901699437495]
["lineTo",807.6002456766718,732.3905764746872]
["lineTo",802.3694348370484,727.9098300562505]
["lineTo",809.2349663646838,727.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,721]
["lineTo",837.5250336353162,727.3594235253128]
["lineTo",844.3905651629515,727.9098300562505]
["lineTo",839.1597543233282,732.3905764746872]
["lineTo",840.7578525229247,739.0901699437495]
["lineTo",834.88,735.5]
["lineTo",829.0021474770753,739.0901699437495]
["lineTo",830.6002456766718,732.3905764746872]
["lineTo",825.3694348370484,727.9098300562505]
["lineTo",832.2349663646838,727.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",857.88,721]
["lineTo",860.5250336353162,727.3594235253128]
["lineTo",867.3905651629515,727.9098300562505]
["lineTo",862.1597543233282,732.3905764746872]
["lineTo",863.7578525229247,739.0901699437495]
["lineTo",857.88,735.5]
["lineTo",852.0021474770753,739.0901699437495]
["lineTo",853.6002456766718,732.3905764746872]
["lineTo",848.3694348370484,727.9098300562505]
["lineTo",855.2349663646838,727.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",880.88,721]
["lineTo",883.5250336353162,727.3594235253128]
["lineTo",890.3905651629515,727.9098300562505]
["lineTo",885.1597543233282,732.3905764746872]
["lineTo",886.7578525229247,739.0901699437495]
["lineTo",880.88,735.5]
["lineTo",875.0021474770753,739.0901699437495]
["lineTo",876.6002456766718,732.3905764746872]
["lineTo",871.3694348370484,727.9098300562505]
["lineTo",878.2349663646838,727.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","20:00",142,732]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Peterborough United – Ipswich Town U21",225.2,732]
["beginPath"]
["moveTo",78,770]
["arcTo",1020,770,1020,832,18]
["arcTo",1020,832,60,832,18]
["arcTo",60,832,60,770,18]
["arcTo",60,770,1020,770,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,801,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","4",102,802]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%86",994,802]
["beginPath"]
["lineTo",788.88,791]
["lineTo",791.5250336353162,797.3594235253128]
["lineTo",798.3905651629515,797.9098300562505]
["lineTo",793.1597543233282,802.3905764746872]
["lineTo",794.7578525229247,809.0901699437495]
["lineTo",788.88,805.5]
["lineTo",783.0021474770753,809.0901699437495]
["lineTo",784.6002456766718,802.3905764746872]
["lineTo",779.3694348370484,797.9098300562505]
["lineTo",786.2349663646838,797.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,791]
["lineTo",814.5250336353162,797.3594235253128]
["lineTo",821.3905651629515,797.9098300562505]
["lineTo",816.1597543233282,802.3905764746872]
["lineTo",817.7578525229247,809.0901699437495]
["lineTo",811.88,805.5]
["lineTo",806.0021474770753,809.0901699437495]
["lineTo",807.6002456766718,802.3905764746872]
["lineTo",802.3694348370484,797.9098300562505]
["lineTo",809.2349663646838,797.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,791]
["lineTo",837.5250336353162,797.3594235253128]
["lineTo",844.3905651629515,797.9098300562505]
["lineTo",839.1597543233282,802.3905764746872]
["lineTo",840.7578525229247,809.0901699437495]
["lineTo",834.88,805.5]
["lineTo",829.0021474770753,809.0901699437495]
["lineTo",830.6002456766718,802.3905764746872]
["lineTo",825.3694348370484,797.9098300562505]
["lineTo",832.2349663646838,797.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",857.88,791]
["lineTo",860.5250336353162,797.3594235253128]
["lineTo",867.3905651629515,797.9098300562505]
["lineTo",862.1597543233282,802.3905764746872]
["lineTo",863.7578525229247,809.0901699437495]
["lineTo",857.88,805.5]
["lineTo",852.0021474770753,809.0901699437495]
["lineTo",853.6002456766718,802.3905764746872]
["lineTo",848.3694348370484,797.9098300562505]
["lineTo",855.2349663646838,797.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",880.88,791]
["lineTo",883.5250336353162,797.3594235253128]
["lineTo",890.3905651629515,797.9098300562505]
["lineTo",885.1597543233282,802.3905764746872]
["lineTo",886.7578525229247,809.0901699437495]
["lineTo",880.88,805.5]
["lineTo",875.0021474770753,809.0901699437495]
["lineTo",876.6002456766718,802.3905764746872]
["lineTo",871.3694348370484,797.9098300562505]
["lineTo",878.2349663646838,797.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Bosnia Herzegovina U21 – Galatasaray",142,802]
["beginPath"]
["moveTo",78,840]
["arcTo",1020,840,1020,902,18]
["arcTo",1020,902,60,902,18]
["arcTo",60,902,60,840,18]
["arcTo",60,840,1020,840,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,871,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","5",102,872]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%83",994,872]
["beginPath"]
["lineTo",788.88,861]
["lineTo",791.5250336353162,867.3594235253128]
["lineTo",798.3905651629515,867.9098300562505]
["lineTo",793.1597543233282,872.3905764746872]
["lineTo",794.7578525229247,879.0901699437495]
["lineTo",788.88,875.5]
["lineTo",783.0021474770753,879.0901699437495]
["lineTo",784.6002456766718,872.3905764746872]
["lineTo",779.3694348370484,867.9098300562505]
["lineTo",786.2349663646838,867.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,861]
["lineTo",814.5250336353162,867.3594235253128]
["lineTo",821.3905651629515,867.9098300562505]
["lineTo",816.1597543233282,872.3905764746872]
["lineTo",817.7578525229247,879.0901699437495]
["lineTo",811.88,875.5]
["lineTo",806.0021474770753,879.0901699437495]
["lineTo",807.6002456766718,872.3905764746872]
["lineTo",802.3694348370484,867.9098300562505]
["lineTo",809.2349663646838,867.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",834.88,861]
["lineTo",837.5250336353162,867.3594235253128]
["lineTo",844.3905651629515,867.9098300562505]
["lineTo",839.1597543233282,872.3905764746872]
["lineTo",840.7578525229247,879.0901699437495]
["lineTo",834.88,875.5]
["lineTo",829.0021474770753,879.0901699437495]
["lineTo",830.6002456766718,872.3905764746872]
["lineTo",825.3694348370484,867.9098300562505]
["lineTo",832.2349663646838,867.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",857.88,861]
["lineTo",860.5250336353162,867.3594235253128]
["lineTo",867.3905651629515,867.9098300562505]
["lineTo",862.1597543233282,872.3905764746872]
["lineTo",863.7578525229247,879.0901699437495]
["lineTo",857.88,875.5]
["lineTo",852.0021474770753,879.0901699437495]
["lineTo",853.6002456766718,872.3905764746872]
["lineTo",848.3694348370484,867.9098300562505]
["lineTo",855.2349663646838,867.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",880.88,861]
["lineTo",883.5250336353162,867.3594235253128]
["lineTo",890.3905651629515,867.9098300562505]
["lineTo",885.1597543233282,872.3905764746872]
["lineTo",886.7578525229247,879.0901699437495]
["lineTo",880.88,875.5]
["lineTo",875.0021474770753,879.0901699437495]
["lineTo",876.6002456766718,872.3905764746872]
["lineTo",871.3694348370484,867.9098300562505]
["lineTo",878.2349663646838,867.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","18:00",142,872]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","İstanbul Başakşehir – Fenerbahçe",225.2,872]
["beginPath"]
["moveTo",78,910]
["arcTo",1020,910,1020,972,18]
["arcTo",1020,972,60,972,18]
["arcTo",60,972,60,910,18]
["arcTo",60,910,1020,910,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,941,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","6",102,942]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%80",994,942]
["beginPath"]
["lineTo",788.88,931]
["lineTo",791.5250336353162,937.3594235253128]
["lineTo",798.3905651629515,937.9098300562505]
["lineTo",793.1597543233282,942.3905764746872]
["lineTo",794.7578525229247,949.0901699437495]
["lineTo",788.88,945.5]
["lineTo",783.0021474770753,949.0901699437495]
["lineTo",784.6002456766718,942.3905764746872]
["lineTo",779.3694348370484,937.9098300562505]
["lineTo",786.2349663646838,937.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,931]
["lineTo",814.5250336353162,937.3594235253128]
["lineTo",821.3905651629515,937.9098300562505]
["lineTo",816.1597543233282,942.3905764746872]
["lineTo",817.7578525229247,949.0901699437495]
["lineTo",811.88,945.5]
["lineTo",806.0021474770753,949.0901699437495]
["lineTo",807.6002456766718,942.3905764746872]
["lineTo",802.3694348370484,937.9098300562505]
["lineTo",809.2349663646838,937.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,931]
["lineTo",837.5250336353162,937.3594235253128]
["lineTo",844.3905651629515,937.9098300562505]
["lineTo",839.1597543233282,942.3905764746872]
["lineTo",840.7578525229247,949.0901699437495]
["lineTo",834.88,945.5]
["lineTo",829.0021474770753,949.0901699437495]
["lineTo",830.6002456766718,942.3905764746872]
["lineTo",825.3694348370484,937.9098300562505]
["lineTo",832.2349663646838,937.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",857.88,931]
["lineTo",860.5250336353162,937.3594235253128]
["lineTo",867.3905651629515,937.9098300562505]
["lineTo",862.1597543233282,942.3905764746872]
["lineTo",863.7578525229247,949.0901699437495]
["lineTo",857.88,945.5]
["lineTo",852.0021474770753,949.0901699437495]
["lineTo",853.6002456766718,942.3905764746872]
["lineTo",848.3694348370484,937.9098300562505]
["lineTo",855.2349663646838,937.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",880.88,931]
["lineTo",883.5250336353162,937.3594235253128]
["lineTo",890.3905651629515,937.9098300562505]
["lineTo",885.1597543233282,942.3905764746872]
["lineTo",886.7578525229247,949.0901699437495]
["lineTo",880.88,945.5]
["lineTo",875.0021474770753,949.0901699437495]
["lineTo",876.6002456766718,942.3905764746872]
["lineTo",871.3694348370484,937.9098300562505]
["lineTo",878.2349663646838,937.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","19:45",142,942]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Ipswich Town U21 – Peterborough United",225.2,942]
["beginPath"]
["moveTo",78,980]
["arcTo",1020,980,1020,1042,18]
["arcTo",1020,1042,60,1042,18]
["arcTo",60,1042,60,980,18]
["arcTo",60,980,1020,980,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,1011,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","7",102,1012]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%77",994,1012]
["beginPath"]
["lineTo",788.88,1001]
["lineTo",791.5250336353162,1007.3594235253128]
["lineTo",798.3905651629515,1007.9098300562505]
["lineTo",793.1597543233282,1012.3905764746872]
["lineTo",794.7578525229247,1019.0901699437495]
["lineTo",788.88,1015.5]
["lineTo",783.0021474770753,1019.0901699437495]
["lineTo",784.6002456766718,1012.3905764746872]
["lineTo",779.3694348370484,1007.9098300562505]
["lineTo",786.2349663646838,1007.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,1001]
["lineTo",814.5250336353162,1007.3594235253128]
["lineTo",821.3905651629515,1007.9098300562505]
["lineTo",816.1597543233282,1012.3905764746872]
["lineTo",817.7578525229247,1019.0901699437495]
["lineTo",811.88,1015.5]
["lineTo",806.0021474770753,1019.0901699437495]
["lineTo",807.6002456766718,1012.3905764746872]
["lineTo",802.3694348370484,1007.9098300562505]
["lineTo",809.2349663646838,1007.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,1001]
["lineTo",837.5250336353162,1007.3594235253128]
["lineTo",844.3905651629515,1007.9098300562505]
["lineTo",839.1597543233282,1012.3905764746872]
["lineTo",840.7578525229247,1019.0901699437495]
["lineTo",834.88,1015.5]
["lineTo",829.0021474770753,1019.0901699437495]
["lineTo",830.6002456766718,1012.3905764746872]
["lineTo",825.3694348370484,1007.9098300562505]
["lineTo",832.2349663646838,1007.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",857.88,1001]
["lineTo",860.5250336353162,1007.3594235253128]
["lineTo",867.3905651629515,1007.9098300562505]
["lineTo",862.1597543233282,1012.3905764746872]
["lineTo",863.7578525229247,1019.0901699437495]
["lineTo",857.88,1015.5]
["lineTo",852.0021474770753,1019.0901699437495]
["lineTo",853.6002456766718,1012.3905764746872]
["lineTo",848.3694348370484,1007.9098300562505]
["lineTo",855.2349663646838,1007.3594235253128]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",880.88,1001]
["lineTo",883.5250336353162,1007.3594235253128]
["lineTo",890.3905651629515,1007.9098300562505]
["lineTo",885.1597543233282,1012.3905764746872]
["lineTo",886.7578525229247,1019.0901699437495]
["lineTo",880.88,1015.5]
["lineTo",875.0021474770753,1019.0901699437495]
["lineTo",876.6002456766718,1012.3905764746872]
["lineTo",871.3694348370484,1007.9098300562505]
["lineTo",878.2349663646838,1007.3594235253128]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","20:00",142,1012]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Galatasaray – Bosnia Herzegovina U21",225.2,1012]
["beginPath"]
["moveTo",78,1050]
["arcTo",1020,1050,1020,1112,18]
["arcTo",1020,1112,60,1112,18]
["arcTo",60,1112,60,1050,18]
["arcTo",60,1050,1020,1050,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,1081,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","8",102,1082]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%74",994,1082]
["beginPath"]
["lineTo",788.88,1071]
["lineTo",791.5250336353162,1077.3594235253126]
["lineTo",798.3905651629515,1077.9098300562505]
["lineTo",793.1597543233282,1082.3905764746874]
["lineTo",794.7578525229247,1089.0901699437495]
["lineTo",788.88,1085.5]
["lineTo",783.0021474770753,1089.0901699437495]
["lineTo",784.6002456766718,1082.3905764746874]
["lineTo",779.3694348370484,1077.9098300562505]
["lineTo",786.2349663646838,1077.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,1071]
["lineTo",814.5250336353162,1077.3594235253126]
["lineTo",821.3905651629515,1077.9098300562505]
["lineTo",816.1597543233282,1082.3905764746874]
["lineTo",817.7578525229247,1089.0901699437495]
["lineTo",811.88,1085.5]
["lineTo",806.0021474770753,1089.0901699437495]
["lineTo",807.6002456766718,1082.3905764746874]
["lineTo",802.3694348370484,1077.9098300562505]
["lineTo",809.2349663646838,1077.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,1071]
["lineTo",837.5250336353162,1077.3594235253126]
["lineTo",844.3905651629515,1077.9098300562505]
["lineTo",839.1597543233282,1082.3905764746874]
["lineTo",840.7578525229247,1089.0901699437495]
["lineTo",834.88,1085.5]
["lineTo",829.0021474770753,1089.0901699437495]
["lineTo",830.6002456766718,1082.3905764746874]
["lineTo",825.3694348370484,1077.9098300562505]
["lineTo",832.2349663646838,1077.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",857.88,1071]
["lineTo",860.5250336353162,1077.3594235253126]
["lineTo",867.3905651629515,1077.9098300562505]
["lineTo",862.1597543233282,1082.3905764746874]
["lineTo",863.7578525229247,1089.0901699437495]
["lineTo",857.88,1085.5]
["lineTo",852.0021474770753,1089.0901699437495]
["lineTo",853.6002456766718,1082.3905764746874]
["lineTo",848.3694348370484,1077.9098300562505]
["lineTo",855.2349663646838,1077.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",880.88,1071]
["lineTo",883.5250336353162,1077.3594235253126]
["lineTo",890.3905651629515,1077.9098300562505]
["lineTo",885.1597543233282,1082.3905764746874]
["lineTo",886.7578525229247,1089.0901699437495]
["lineTo",880.88,1085.5]
["lineTo",875.0021474770753,1089.0901699437495]
["lineTo",876.6002456766718,1082.3905764746874]
["lineTo",871.3694348370484,1077.9098300562505]
["lineTo",878.2349663646838,1077.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Fenerbahçe – İstanbul Başakşehir",142,1082]
["beginPath"]
["moveTo",78,1120]
["arcTo",1020,1120,1020,1182,18]
["arcTo",1020,1182,60,1182,18]
["arcTo",60,1182,60,1120,18]
["arcTo",60,1120,1020,1120,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,1151,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","9",102,1152]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%71",994,1152]
["beginPath"]
["lineTo",788.88,1141]
["lineTo",791.5250336353162,1147.3594235253126]
["lineTo",798.3905651629515,1147.9098300562505]
["lineTo",793.1597543233282,1152.3905764746874]
["lineTo",794.7578525229247,1159.0901699437495]
["lineTo",788.88,1155.5]
["lineTo",783.0021474770753,1159.0901699437495]
["lineTo",784.6002456766718,1152.3905764746874]
["lineTo",779.3694348370484,1147.9098300562505]
["lineTo",786.2349663646838,1147.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,1141]
["lineTo",814.5250336353162,1147.3594235253126]
["lineTo",821.3905651629515,1147.9098300562505]
["lineTo",816.1597543233282,1152.3905764746874]
["lineTo",817.7578525229247,1159.0901699437495]
["lineTo",811.88,1155.5]
["lineTo",806.0021474770753,1159.0901699437495]
["lineTo",807.6002456766718,1152.3905764746874]
["lineTo",802.3694348370484,1147.9098300562505]
["lineTo",809.2349663646838,1147.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,1141]
["lineTo",837.5250336353162,1147.3594235253126]
["lineTo",844.3905651629515,1147.9098300562505]
["lineTo",839.1597543233282,1152.3905764746874]
["lineTo",840.7578525229247,1159.0901699437495]
["lineTo",834.88,1155.5]
["lineTo",829.0021474770753,1159.0901699437495]
["lineTo",830.6002456766718,1152.3905764746874]
["lineTo",825.3694348370484,1147.9098300562505]
["lineTo",832.2349663646838,1147.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",857.88,1141]
["lineTo",860.5250336353162,1147.3594235253126]
["lineTo",867.3905651629515,1147.9098300562505]
["lineTo",862.1597543233282,1152.3905764746874]
["lineTo",863.7578525229247,1159.0901699437495]
["lineTo",857.88,1155.5]
["lineTo",852.0021474770753,1159.0901699437495]
["lineTo",853.6002456766718,1152.3905764746874]
["lineTo",848.3694348370484,1147.9098300562505]
["lineTo",855.2349663646838,1147.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",880.88,1141]
["lineTo",883.5250336353162,1147.3594235253126]
["lineTo",890.3905651629515,1147.9098300562505]
["lineTo",885.1597543233282,1152.3905764746874]
["lineTo",886.7578525229247,1159.0901699437495]
["lineTo",880.88,1155.5]
["lineTo",875.0021474770753,1159.0901699437495]
["lineTo",876.6002456766718,1152.3905764746874]
["lineTo",871.3694348370484,1147.9098300562505]
["lineTo",878.2349663646838,1147.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","18:00",142,1152]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Peterborough United – Ipswich Town U21",225.2,1152]
["beginPath"]
["moveTo",78,1190]
["arcTo",1020,1190,1020,1252,18]
["arcTo",1020,1252,60,1252,18]
["arcTo",60,1252,60,1190,18]
["arcTo",60,1190,1020,1190,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,1221,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","10",102,1222]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%68",994,1222]
["beginPath"]
["lineTo",788.88,1211]
["lineTo",791.5250336353162,1217.3594235253126]
["lineTo",798.3905651629515,1217.9098300562505]
["lineTo",793.1597543233282,1222.3905764746874]
["lineTo",794.7578525229247,1229.0901699437495]
["lineTo",788.88,1225.5]
["lineTo",783.0021474770753,1229.0901699437495]
["lineTo",784.6002456766718,1222.3905764746874]
["lineTo",779.3694348370484,1217.9098300562505]
["lineTo",786.2349663646838,1217.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,1211]
["lineTo",814.5250336353162,1217.3594235253126]
["lineTo",821.3905651629515,1217.9098300562505]
["lineTo",816.1597543233282,1222.3905764746874]
["lineTo",817.7578525229247,1229.0901699437495]
["lineTo",811.88,1225.5]
["lineTo",806.0021474770753,1229.0901699437495]
["lineTo",807.6002456766718,1222.3905764746874]
["lineTo",802.3694348370484,1217.9098300562505]
["lineTo",809.2349663646838,1217.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",834.88,1211]
["lineTo",837.5250336353162,1217.3594235253126]
["lineTo",844.3905651629515,1217.9098300562505]
["lineTo",839.1597543233282,1222.3905764746874]
["lineTo",840.7578525229247,1229.0901699437495]
["lineTo",834.88,1225.5]
["lineTo",829.0021474770753,1229.0901699437495]
["lineTo",830.6002456766718,1222.3905764746874]
["lineTo",825.3694348370484,1217.9098300562505]
["lineTo",832.2349663646838,1217.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",857.88,1211]
["lineTo",860.5250336353162,1217.3594235253126]
["lineTo",867.3905651629515,1217.9098300562505]
["lineTo",862.1597543233282,1222.3905764746874]
["lineTo",863.7578525229247,1229.0901699437495]
["lineTo",857.88,1225.5]
["lineTo",852.0021474770753,1229.0901699437495]
["lineTo",853.6002456766718,1222.3905764746874]
["lineTo",848.3694348370484,1217.9098300562505]
["lineTo",855.2349663646838,1217.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",880.88,1211]
["lineTo",883.5250336353162,1217.3594235253126]
["lineTo",890.3905651629515,1217.9098300562505]
["lineTo",885.1597543233282,1222.3905764746874]
["lineTo",886.7578525229247,1229.0901699437495]
["lineTo",880.88,1225.5]
["lineTo",875.0021474770753,1229.0901699437495]
["lineTo",876.6002456766718,1222.3905764746874]
["lineTo",871.3694348370484,1217.9098300562505]
["lineTo",878.2349663646838,1217.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","19:45",142,1222]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Bosnia Herzegovina U21 – Galatasaray",225.2,1222]
["beginPath"]
["moveTo",78,1260]
["arcTo",1020,1260,1020,1322,18]
["arcTo",1020,1322,60,1322,18]
["arcTo",60,1322,60,1260,18]
["arcTo",60,1260,1020,1260,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,1291,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","11",102,1292]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%65",994,1292]
["beginPath"]
["lineTo",788.88,1281]
["lineTo",791.5250336353162,1287.3594235253126]
["lineTo",798.3905651629515,1287.9098300562505]
["lineTo",793.1597543233282,1292.3905764746874]
["lineTo",794.7578525229247,1299.0901699437495]
["lineTo",788.88,1295.5]
["lineTo",783.0021474770753,1299.0901699437495]
["lineTo",784.6002456766718,1292.3905764746874]
["lineTo",779.3694348370484,1287.9098300562505]
["lineTo",786.2349663646838,1287.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,1281]
["lineTo",814.5250336353162,1287.3594235253126]
["lineTo",821.3905651629515,1287.9098300562505]
["lineTo",816.1597543233282,1292.3905764746874]
["lineTo",817.7578525229247,1299.0901699437495]
["lineTo",811.88,1295.5]
["lineTo",806.0021474770753,1299.0901699437495]
["lineTo",807.6002456766718,1292.3905764746874]
["lineTo",802.3694348370484,1287.9098300562505]
["lineTo",809.2349663646838,1287.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,1281]
["lineTo",837.5250336353162,1287.3594235253126]
["lineTo",844.3905651629515,1287.9098300562505]
["lineTo",839.1597543233282,1292.3905764746874]
["lineTo",840.7578525229247,1299.0901699437495]
["lineTo",834.88,1295.5]
["lineTo",829.0021474770753,1299.0901699437495]
["lineTo",830.6002456766718,1292.3905764746874]
["lineTo",825.3694348370484,1287.9098300562505]
["lineTo",832.2349663646838,1287.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",857.88,1281]
["lineTo",860.5250336353162,1287.3594235253126]
["lineTo",867.3905651629515,1287.9098300562505]
["lineTo",862.1597543233282,1292.3905764746874]
["lineTo",863.7578525229247,1299.0901699437495]
["lineTo",857.88,1295.5]
["lineTo",852.0021474770753,1299.0901699437495]
["lineTo",853.6002456766718,1292.3905764746874]
["lineTo",848.3694348370484,1287.9098300562505]
["lineTo",855.2349663646838,1287.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",880.88,1281]
["lineTo",883.5250336353162,1287.3594235253126]
["lineTo",890.3905651629515,1287.9098300562505]
["lineTo",885.1597543233282,1292.3905764746874]
["lineTo",886.7578525229247,1299.0901699437495]
["lineTo",880.88,1295.5]
["lineTo",875.0021474770753,1299.0901699437495]
["lineTo",876.6002456766718,1292.3905764746874]
["lineTo",871.3694348370484,1287.9098300562505]
["lineTo",878.2349663646838,1287.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","20:00",142,1292]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","İstanbul Başakşehir – Fenerbahçe",225.2,1292]
["beginPath"]
["moveTo",78,1330]
["arcTo",1020,1330,1020,1392,18]
["arcTo",1020,1392,60,1392,18]
["arcTo",60,1392,60,1330,18]
["arcTo",60,1330,1020,1330,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,1361,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","12",102,1362]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%62",994,1362]
["beginPath"]
["lineTo",788.88,1351]
["lineTo",791.5250336353162,1357.3594235253126]
["lineTo",798.3905651629515,1357.9098300562505]
["lineTo",793.1597543233282,1362.3905764746874]
["lineTo",794.7578525229247,1369.0901699437495]
["lineTo",788.88,1365.5]
["lineTo",783.0021474770753,1369.0901699437495]
["lineTo",784.6002456766718,1362.3905764746874]
["lineTo",779.3694348370484,1357.9098300562505]
["lineTo",786.2349663646838,1357.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,1351]
["lineTo",814.5250336353162,1357.3594235253126]
["lineTo",821.3905651629515,1357.9098300562505]
["lineTo",816.1597543233282,1362.3905764746874]
["lineTo",817.7578525229247,1369.0901699437495]
["lineTo",811.88,1365.5]
["lineTo",806.0021474770753,1369.0901699437495]
["lineTo",807.6002456766718,1362.3905764746874]
["lineTo",802.3694348370484,1357.9098300562505]
["lineTo",809.2349663646838,1357.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,1351]
["lineTo",837.5250336353162,1357.3594235253126]
["lineTo",844.3905651629515,1357.9098300562505]
["lineTo",839.1597543233282,1362.3905764746874]
["lineTo",840.7578525229247,1369.0901699437495]
["lineTo",834.88,1365.5]
["lineTo",829.0021474770753,1369.0901699437495]
["lineTo",830.6002456766718,1362.3905764746874]
["lineTo",825.3694348370484,1357.9098300562505]
["lineTo",832.2349663646838,1357.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",857.88,1351]
["lineTo",860.5250336353162,1357.3594235253126]
["lineTo",867.3905651629515,1357.9098300562505]
["lineTo",862.1597543233282,1362.3905764746874]
["lineTo",863.7578525229247,1369.0901699437495]
["lineTo",857.88,1365.5]
["lineTo",852.0021474770753,1369.0901699437495]
["lineTo",853.6002456766718,1362.3905764746874]
["lineTo",848.3694348370484,1357.9098300562505]
["lineTo",855.2349663646838,1357.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",880.88,1351]
["lineTo",883.5250336353162,1357.3594235253126]
["lineTo",890.3905651629515,1357.9098300562505]
["lineTo",885.1597543233282,1362.3905764746874]
["lineTo",886.7578525229247,1369.0901699437495]
["lineTo",880.88,1365.5]
["lineTo",875.0021474770753,1369.0901699437495]
["lineTo",876.6002456766718,1362.3905764746874]
["lineTo",871.3694348370484,1357.9098300562505]
["lineTo",878.2349663646838,1357.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Ipswich Town U21 – Peterborough United",142,1362]
["beginPath"]
["moveTo",78,1400]
["arcTo",1020,1400,1020,1462,18]
["arcTo",1020,1462,60,1462,18]
["arcTo",60,1462,60,1400,18]
["arcTo",60,1400,1020,1400,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,1431,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","13",102,1432]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%59",994,1432]
["beginPath"]
["lineTo",788.88,1421]
["lineTo",791.5250336353162,1427.3594235253126]
["lineTo",798.3905651629515,1427.9098300562505]
["lineTo",793.1597543233282,1432.3905764746874]
["lineTo",794.7578525229247,1439.0901699437495]
["lineTo",788.88,1435.5]
["lineTo",783.0021474770753,1439.0901699437495]
["lineTo",784.6002456766718,1432.3905764746874]
["lineTo",779.3694348370484,1427.9098300562505]
["lineTo",786.2349663646838,1427.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,1421]
["lineTo",814.5250336353162,1427.3594235253126]
["lineTo",821.3905651629515,1427.9098300562505]
["lineTo",816.1597543233282,1432.3905764746874]
["lineTo",817.7578525229247,1439.0901699437495]
["lineTo",811.88,1435.5]
["lineTo",806.0021474770753,1439.0901699437495]
["lineTo",807.6002456766718,1432.3905764746874]
["lineTo",802.3694348370484,1427.9098300562505]
["lineTo",809.2349663646838,1427.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,1421]
["lineTo",837.5250336353162,1427.3594235253126]
["lineTo",844.3905651629515,1427.9098300562505]
["lineTo",839.1597543233282,1432.3905764746874]
["lineTo",840.7578525229247,1439.0901699437495]
["lineTo",834.88,1435.5]
["lineTo",829.0021474770753,1439.0901699437495]
["lineTo",830.6002456766718,1432.3905764746874]
["lineTo",825.3694348370484,1427.9098300562505]
["lineTo",832.2349663646838,1427.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",857.88,1421]
["lineTo",860.5250336353162,1427.3594235253126]
["lineTo",867.3905651629515,1427.9098300562505]
["lineTo",862.1597543233282,1432.3905764746874]
["lineTo",863.7578525229247,1439.0901699437495]
["lineTo",857.88,1435.5]
["lineTo",852.0021474770753,1439.0901699437495]
["lineTo",853.6002456766718,1432.3905764746874]
["lineTo",848.3694348370484,1427.9098300562505]
["lineTo",855.2349663646838,1427.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",880.88,1421]
["lineTo",883.5250336353162,1427.3594235253126]
["lineTo",890.3905651629515,1427.9098300562505]
["lineTo",885.1597543233282,1432.3905764746874]
["lineTo",886.7578525229247,1439.0901699437495]
["lineTo",880.88,1435.5]
["lineTo",875.0021474770753,1439.0901699437495]
["lineTo",876.6002456766718,1432.3905764746874]
["lineTo",871.3694348370484,1427.9098300562505]
["lineTo",878.2349663646838,1427.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","18:00",142,1432]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Galatasaray – Bosnia Herzegovina U21",225.2,1432]
["beginPath"]
["moveTo",78,1470]
["arcTo",1020,1470,1020,1532,18]
["arcTo",1020,1532,60,1532,18]
["arcTo",60,1532,60,1470,18]
["arcTo",60,1470,1020,1470,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,1501,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","14",102,1502]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%56",994,1502]
["beginPath"]
["lineTo",788.88,1491]
["lineTo",791.5250336353162,1497.3594235253126]
["lineTo",798.3905651629515,1497.9098300562505]
["lineTo",793.1597543233282,1502.3905764746874]
["lineTo",794.7578525229247,1509.0901699437495]
["lineTo",788.88,1505.5]
["lineTo",783.0021474770753,1509.0901699437495]
["lineTo",784.6002456766718,1502.3905764746874]
["lineTo",779.3694348370484,1497.9098300562505]
["lineTo",786.2349663646838,1497.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,1491]
["lineTo",814.5250336353162,1497.3594235253126]
["lineTo",821.3905651629515,1497.9098300562505]
["lineTo",816.1597543233282,1502.3905764746874]
["lineTo",817.7578525229247,1509.0901699437495]
["lineTo",811.88,1505.5]
["lineTo",806.0021474770753,1509.0901699437495]
["lineTo",807.6002456766718,1502.3905764746874]
["lineTo",802.3694348370484,1497.9098300562505]
["lineTo",809.2349663646838,1497.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",834.88,1491]
["lineTo",837.5250336353162,1497.3594235253126]
["lineTo",844.3905651629515,1497.9098300562505]
["lineTo",839.1597543233282,1502.3905764746874]
["lineTo",840.7578525229247,1509.0901699437495]
["lineTo",834.88,1505.5]
["lineTo",829.0021474770753,1509.0901699437495]
["lineTo",830.6002456766718,1502.3905764746874]
["lineTo",825.3694348370484,1497.9098300562505]
["lineTo",832.2349663646838,1497.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",857.88,1491]
["lineTo",860.5250336353162,1497.3594235253126]
["lineTo",867.3905651629515,1497.9098300562505]
["lineTo",862.1597543233282,1502.3905764746874]
["lineTo",863.7578525229247,1509.0901699437495]
["lineTo",857.88,1505.5]
["lineTo",852.0021474770753,1509.0901699437495]
["lineTo",853.6002456766718,1502.3905764746874]
["lineTo",848.3694348370484,1497.9098300562505]
["lineTo",855.2349663646838,1497.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",880.88,1491]
["lineTo",883.5250336353162,1497.3594235253126]
["lineTo",890.3905651629515,1497.9098300562505]
["lineTo",885.1597543233282,1502.3905764746874]
["lineTo",886.7578525229247,1509.0901699437495]
["lineTo",880.88,1505.5]
["lineTo",875.0021474770753,1509.0901699437495]
["lineTo",876.6002456766718,1502.3905764746874]
["lineTo",871.3694348370484,1497.9098300562505]
["lineTo",878.2349663646838,1497.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","19:45",142,1502]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Fenerbahçe – İstanbul Başakşehir",225.2,1502]
["beginPath"]
["moveTo",78,1540]
["arcTo",1020,1540,1020,1602,18]
["arcTo",1020,1602,60,1602,18]
["arcTo",60,1602,60,1540,18]
["arcTo",60,1540,1020,1540,18]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",2]
["=","strokeStyle","#123a5c"]
["stroke"]
["beginPath"]
["arc",102,1571,20,0,6.283185307179586]
["=","fillStyle","#123a5c"]
["fill"]
["=","fillStyle","#ffffff"]
["=","font","800 22px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","textAlign","center"]
["=","textBaseline","middle"]
["fillText","15",102,1572]
["=","textAlign","right"]
["=","fillStyle","#fb7d27"]
["=","font","900 38px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","%53",994,1572]
["beginPath"]
["lineTo",788.88,1561]
["lineTo",791.5250336353162,1567.3594235253126]
["lineTo",798.3905651629515,1567.9098300562505]
["lineTo",793.1597543233282,1572.3905764746874]
["lineTo",794.7578525229247,1579.0901699437495]
["lineTo",788.88,1575.5]
["lineTo",783.0021474770753,1579.0901699437495]
["lineTo",784.6002456766718,1572.3905764746874]
["lineTo",779.3694348370484,1567.9098300562505]
["lineTo",786.2349663646838,1567.3594235253126]
["closePath"]
["=","fillStyle","#fb7d27"]
["fill"]
["beginPath"]
["lineTo",811.88,1561]
["lineTo",814.5250336353162,1567.3594235253126]
["lineTo",821.3905651629515,1567.9098300562505]
["lineTo",816.1597543233282,1572.3905764746874]
["lineTo",817.7578525229247,1579.0901699437495]
["lineTo",811.88,1575.5]
["lineTo",806.0021474770753,1579.0901699437495]
["lineTo",807.6002456766718,1572.3905764746874]
["lineTo",802.3694348370484,1567.9098300562505]
["lineTo",809.2349663646838,1567.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",834.88,1561]
["lineTo",837.5250336353162,1567.3594235253126]
["lineTo",844.3905651629515,1567.9098300562505]
["lineTo",839.1597543233282,1572.3905764746874]
["lineTo",840.7578525229247,1579.0901699437495]
["lineTo",834.88,1575.5]
["lineTo",829.0021474770753,1579.0901699437495]
["lineTo",830.6002456766718,1572.3905764746874]
["lineTo",825.3694348370484,1567.9098300562505]
["lineTo",832.2349663646838,1567.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",857.88,1561]
["lineTo",860.5250336353162,1567.3594235253126]
["lineTo",867.3905651629515,1567.9098300562505]
["lineTo",862.1597543233282,1572.3905764746874]
["lineTo",863.7578525229247,1579.0901699437495]
["lineTo",857.88,1575.5]
["lineTo",852.0021474770753,1579.0901699437495]
["lineTo",853.6002456766718,1572.3905764746874]
["lineTo",848.3694348370484,1567.9098300562505]
["lineTo",855.2349663646838,1567.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["beginPath"]
["lineTo",880.88,1561]
["lineTo",883.5250336353162,1567.3594235253126]
["lineTo",890.3905651629515,1567.9098300562505]
["lineTo",885.1597543233282,1572.3905764746874]
["lineTo",886.7578525229247,1579.0901699437495]
["lineTo",880.88,1575.5]
["lineTo",875.0021474770753,1579.0901699437495]
["lineTo",876.6002456766718,1572.3905764746874]
["lineTo",871.3694348370484,1567.9098300562505]
["lineTo",878.2349663646838,1567.3594235253126]
["closePath"]
["=","fillStyle","#123a5c"]
["fill"]
["=","textAlign","left"]
["=","font","600 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#8ea4b8"]
["fillText","20:00",142,1572]
["=","font","700 30px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 27px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","font","700 24px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#ffffff"]
["fillText","Peterborough United – Ipswich Town U21",225.2,1572]
["=","textAlign","center"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#8ea4b8"]
["=","font","500 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","Veri destekli sinyal, garanti değil.",540,1680]"
`;

exports[`drawStory çizim kaydı > logo varsa rozete kırpılarak çizilir 1`] = `
"["addColorStop","createLinearGradient(0,0,0,1920)",0,"#00111f"]
["addColorStop","createLinearGradient(0,0,0,1920)",0.5,"#00192d"]
["addColorStop","createLinearGradient(0,0,0,1920)",1,"#011d31"]
["=","fillStyle","createLinearGradient(0,0,0,1920)"]
["fillRect",0,0,1080,1920]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",0,"rgba(251, 125, 39, 0.22)"]
["addColorStop","createRadialGradient(1080,0,0,1080,0,900)",1,"rgba(251, 125, 39, 0)"]
["=","fillStyle","createRadialGradient(1080,0,0,1080,0,900)"]
["fillRect",0,0,1080,1920]
["beginPath"]
["moveTo",104,240]
["arcTo",270,240,270,450,44]
["arcTo",270,450,60,450,44]
["arcTo",60,450,60,240,44]
["arcTo",60,240,270,240,44]
["closePath"]
["=","fillStyle","#0a2a44"]
["fill"]
["=","lineWidth",4]
["=","strokeStyle","#fb7d27"]
["stroke"]
["drawImage","logo",140,36,800,800,74,254,182,182]
["=","textAlign","left"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#ffffff"]
["=","font","800 50px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","GÜNÜN",306,284]
["=","font","900 88px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["=","fillStyle","#fb7d27"]
["=","font","900 88px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","KG VAR",306,382]
["=","fillStyle","#ffffff"]
["=","font","800 50px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","ÖNERİLERİ",306,448]
["=","fillStyle","#8ea4b8"]
["=","font","600 34px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","6 Ekim 2026 Salı",60,520]
["=","textAlign","center"]
["=","textBaseline","alphabetic"]
["=","fillStyle","#8ea4b8"]
["=","font","500 28px \\"Inter Variable\\", \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif"]
["fillText","Veri destekli sinyal, garanti değil.",540,1680]"
`;
